// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compatibility routes GET /tags/latest should return most popular tags ordered by count 1`] = `
Array [
  Object {
    "name": "fullstack",
  },
  Object {
    "name": "development",
  },
  Object {
    "name": "webdev",
  },
  Object {
    "name": "golang",
  },
  Object {
    "name": "rust",
  },
]
`;

exports[`compatibility routes GET /tags/search should search for tags and order by count 1`] = `
Object {
  "hits": Array [
    Object {
      "name": "development",
    },
    Object {
      "name": "webdev",
    },
  ],
  "query": "dev",
}
`;

exports[`query popularTags should return most popular tags ordered by count 1`] = `
Object {
  "popularTags": Array [
    Object {
      "name": "fullstack",
    },
    Object {
      "name": "development",
    },
    Object {
      "name": "webdev",
    },
    Object {
      "name": "golang",
    },
    Object {
      "name": "rust",
    },
  ],
}
`;

exports[`query searchTags should search for tags and order by count 1`] = `
Object {
  "searchTags": Object {
    "hits": Array [
      Object {
        "name": "development",
      },
      Object {
        "name": "webdev",
      },
    ],
    "query": "dev",
  },
}
`;

exports[`query searchTags should take into account keyword synonyms 1`] = `
Object {
  "searchTags": Object {
    "hits": Array [
      Object {
        "name": "webdev",
      },
    ],
    "query": "web-dev",
  },
}
`;
